# CasBot

./: .env.prod  .gitignore  README.md  bot.py  chat_db.sqlite3  nohup.out  pyproject.toml  remember.txt
data/course_config/: config.json
data/course_config/fonts/: simsun.ttc
menu_config/fonts/: simsun.ttc
qqbot/plugins/: basic.py  gpt.py  lor.py  problem.py
qqbot/plugins/mutiluser/: __init__.py  read_user.py  student.json  write_user.py
